# volk

./: CMakeLists.txt
.github/workflows/: check-pr-formatting.yml
apps/: volk-config-info.cc  volk_function_test.cc  volk_profile.cc
include/volk/: constants.h  volk_avx_intrinsics.h  volk_common.h  volk_complex.hh  volk_malloc.h  volk_prefs.h  volk_ssse3_intrinsics.h  volk_version.h.in
kernels/volk/: volk_32f_8u_polarbutterfly_32f.h  volk_32f_8u_polarbutterflypuppet_32f.h  volk_32f_index_max_16u.h  volk_32f_index_max_32u.h  volk_32fc_index_max_16u.h  volk_32fc_index_max_32u.h  volk_8u_bit_reverse_vector_8u.h  volk_8u_pack8_8u.h  volk_8u_pack8puppet_8u.h  volk_8u_unpack8_8u.h  volk_8u_unpack8puppet_8u.h  volk_8u_x2_encodeframepolar_8u.h  volk_8u_x2_exor_8u.h
lib/: CMakeLists.txt  kernel_tests.h  qa_utils.cc  testqa.cc  volk_qa_test_main.cc  volk_rank_archs.h
profile/: CMakeLists.txt  README.md  volk_profile.cpp
tests/: CMakeLists.txt  test_volk_32f_x3_sum_of_poly_32f.cc  test_volk_32fc_x2_multiply_32fc.cc  volk_test.cc  volk_test.h
tmpl/: qa_volk.tmpl.cc  qa_volk.tmpl.h  volk.tmpl.c  volk.tmpl.h  volk_cpu.tmpl.h  volk_machines.tmpl.h
